fix openapi; add sentry; add color log
